kubernetes/prebid-influxdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prebid
    component: influxdb
  name: prebid-influxdb
  namespace: prebid
spec:
  selector:
    matchLabels:
      app: prebid
      component: influxdb
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: prebid
        component: influxdb
    spec:
      containers:
      - image: influxdb:latest
        imagePullPolicy: IfNotPresent
        name: influxdb
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 64Mi
        volumeMounts:
        - name: influxdb
          mountPath: /var/lib/influxdb
      volumes:
        - name: influxdb
          persistentVolumeClaim:
            claimName: influxdb-pv-claim            
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: prebid-influxdb
  namespace: prebid
  labels:
    app: prebid
    component: influxdb
spec:
  type: ClusterIP
  ports:
  - port: 8086
    protocol: TCP
    targetPort: 8086
  selector:
    app: prebid
    component: influxdb
