kubernetes/prebid-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prebid
    component: redis
  name: prebid-redis
  namespace: prebid
spec:
  selector:
    matchLabels:
      app: prebid
      component: redis
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: prebid
        component: redis
    spec:
      containers:
      - image: redis:latest
        imagePullPolicy: IfNotPresent
        name: redis
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 64Mi
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: redis-pv-claim            
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: prebid-redis
  namespace: prebid
  labels:
    app: prebid
    component: redis
spec:
  type: ClusterIP
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: prebid
    component: redis
